twig 에서 페이지 타이틀을 직접 지정하고 재사용 할 수 있도록

--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{{ title ? title ~ ' - ' }}Ridibooks CMS</title>
+  <title>{% block title %}{{ title }}{% endblock %} - Ridibooks CMS</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   {% if BASE_HREF %}
     <base href="//{{ BASE_HREF }}"/>
@@ -197,7 +197,7 @@
       {% endfor %}
 
       <ul>
-        <li><h3>{% block title %}{% endblock %}</h3></li>
+        <li><h3>{{ block('title') }}</h3></li>
         {% if purpose %}
         <li>사용목적: {% block purpose %}{% endblock %}</li>
         {% endif %}
