[webpack] multiple entry 가능하도록 설정파일 수정

--- a/views/index_newer.twig
+++ b/views/index_newer.twig
@@ -36,7 +36,7 @@
   {% endblock %}
 
   <link rel="stylesheet" href="{{ STATIC_URL }}/css/admin/admin.css">
-  <script src="/static/dist/app.bundle.js"></script>
+  <script src="/static/dist/commons.js"></script>
 </head>
 <body>
 
