update bower fix define of jquery-form

--- a/views/index.twig
+++ b/views/index.twig
@@ -78,7 +78,7 @@
           'jquery.iframe-transport': '/static/bower_components/jquery-file-upload/js/jquery.iframe-transport',
           'cookie': '/static/bower_components/jquery.cookie/jquery.cookie',
           'atagToDownloadTable': '{{ STATIC_URL }}/js/jquery.atag.to.download.table',
-          'jquery.form': '/static/bower_components/jquery-form/jquery.form',
+          'jquery-form': '/static/bower_components/jquery-form/jquery.form',
           'jquery.browser': '/static/bower_components/jquery.browser/dist/jquery.browser.min',
           'jquery.tmpl': '{{ STATIC_URL }}/js/jquery.tmpl.min',
           'jquery.attrajax': '/static/bower_components/jquery.attrajax/jquery.attrajax',
@@ -93,10 +93,10 @@
           "stickytable": ["jquery"],
           "cookie": ["jquery"],
           "atagToDownloadTable": ["jquery"],
-          "jquery.form": ["jquery"],
+          "jquery-form": ["jquery"],
           "jquery.browser": ["jquery"],
           "jquery.tmpl": ["jquery"],
-          "jquery.attrajax": ["jquery", 'jquery.form', "jquery.tmpl"],
+          "jquery.attrajax": ["jquery", 'jquery-form', "jquery.tmpl"],
           "iframeAutoHeight": ["jquery", 'jquery.browser'],
           "datatables.net": ["jquery"],
           "highlight": ["jquery"],
