--- a/views/index_new.twig
+++ b/views/index_new.twig
@@ -96,7 +96,7 @@
           'highlight': '/static/bower_components/jquery-highlight/jquery.highlight',
           'ace': '/static/bower_components/ace-builds/src',
           'spin': '/static/bower_components/spin.js/spin',
-          'jquery.form': '/static/bower_components/jquery-form/jquery.form',
+          'jquery-form': '/static/bower_components/jquery-form/jquery.form',
           'jquery.attrajax': '/static/bower_components/jquery.attrajax/jquery.attrajax',
           'jquery.tmpl': '{{ STATIC_URL }}/js/jquery.tmpl.min',
           'tinyMCE': '/static/bower_components/tinymce/tinymce.min',
@@ -120,9 +120,9 @@
           "bootstrap.datatables": ["datatables.net"],
           "bootstrap.fileinput": ["bootstrap"],
 
-          "jquery.attrajax": ["jquery", 'jquery.form', "jquery.tmpl"],
+          "jquery.attrajax": ["jquery", 'jquery-form', "jquery.tmpl"],
           "datatables.net": ["jquery"],
-          "jquery.form": ["jquery"],
+          "jquery-form": ["jquery"],
           "monthpicker": ["jquery"],
           "select2": ["jquery"],
           "stickyTableHeaders": ["jquery"],
