--- a/views/super/user_edit.twig
+++ b/views/super/user_edit.twig
@@ -11,6 +11,8 @@
         $(function () {
           loadPermissions();
 
+          initManagingCps();
+
           // 유저 정보 저장
           $("#btn_info_save").click(function () {
             const $form = $('form');
@@ -19,11 +21,6 @@
             if ($form[0].checkValidity()) {
               $form.submit();
             }
-          });
-
-          // 유저 정보, 권한 관리 취소
-          $("#btn_info_cancel, #btn_auth_cancel").click(function () {
-            history.back();
           });
 
           $('#js_delete_admin').click(function (e) {
@@ -54,15 +51,6 @@
 
           // 메뉴 관리
           loadAssignedMenus($form.find('[name=menu_ids]'));
-
-          // 제휴CP 관리
-          setManagingCpList($form.find('[name=partner_cp_ids]'), 2);
-
-          // 운영CP 관리
-          setManagingCpList($form.find("[name=operator_cp_ids]"), 3);
-
-          // 제작CP 관리
-          setManagingCpList($form.find("[name=production_cp_ids]"), 1);
         }
 
         function loadAssignedTags($tagSelect) {
@@ -121,6 +109,24 @@
           });
         }
 
+        function initManagingCps() {
+          const $form = $('form[id=managing-cps]');
+
+          // 제휴CP 관리
+          setManagingCpList($form.find('[name=partner_cp_ids]'), 2);
+
+          // 운영CP 관리
+          setManagingCpList($form.find("[name=operator_cp_ids]"), 3);
+
+          // 제작CP 관리
+          setManagingCpList($form.find("[name=production_cp_ids]"), 1);
+
+          // 관리 CP 정보 저장
+          $('#js_cp_update').click(function () {
+            updateManagingCps($form.serializeArray());
+          });
+        }
+
         function setManagingCpList(target, type) {
           const data = {
             id: '{{ admin_id }}',
@@ -135,6 +141,25 @@
             success: function (res) {
               target.attr('value', res);
               target.setCpUserMultipleSelect2();
+            },
+            error: function (xhr) {
+              alert(xhr.responseText);
+            }
+          });
+        }
+
+        function updateManagingCps(data) {
+          $.ajax({
+            type: 'POST',
+            url: '/admin/publisher/managers.update.ajax',
+            data: data,
+            cache: false,
+            success: function (res) {
+              if (res.success) {
+                alert('성공적으로 업데이트 되었습니다.');
+              } else {
+                alert(res.message);
+              }
             },
             error: function (xhr) {
               alert(xhr.responseText);
@@ -201,8 +226,8 @@
     </div>
   </form>
 
-  <form class="form-horizontal" id="permissions" action="/super/users/{{ userDetail.id }}/permissions" method="POST">
-    <div class="col-xs-12 col-md-6">
+  <div class="col-xs-12 col-md-6">
+    <form class="form-horizontal" id="permissions" action="/super/users/{{ userDetail.id }}/permissions" method="POST">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h4 class="panel-title">유저 권한 관리</h4>
@@ -222,6 +247,21 @@
             </div>
           </div>
 
+          <div class="btn-group btn-group-sm pull-right">
+            <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-file"></i> 저장</button>
+          </div>
+        </div>
+      </div>
+    </form>
+
+    <form class="form-horizontal" id="managing-cps" method="POST">
+      <input type="hidden" name="user_id" value="{{ userDetail.id }}">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h4 class="panel-title">담당 CP 관리</h4>
+        </div>
+
+        <div class="panel-body">
           <div class="form-group form-group-sm">
             <label class="col-xs-2 control-label">제휴담당 CP</label>
             <div class="col-xs-10">
@@ -244,15 +284,15 @@
           </div>
 
           <div class="btn-group btn-group-sm pull-right">
-            <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-file"></i> 저장</button>
-            <button type="button" class="btn btn-default" id="btn_auth_cancel"><i class="glyphicon glyphicon-repeat"></i> 취소</button>
+            <a id="js_cp_update" class="btn btn-default"><i class="glyphicon glyphicon-file"></i> 저장</a>
           </div>
         </div>
       </div>
-    </div>
-  </form>
+    </form>
+  </div>
 
-  <div class="col-xs-12">
+  <div class="col-xs-12 pull-right">
     <a id="js_delete_admin" class="btn btn-default btn-danger pull-right">삭제</a>
   </div>
+
 {% endblock %}
